fix alignment

--- a/client/stylesheets/order.less
+++ b/client/stylesheets/order.less
@@ -138,7 +138,6 @@ header.shop-info-header {
     font-size: 30px;
     text-align: center;
     line-height: 15px;
-    margin: 0 5px;
   }
 }
 
